tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetNamespaces_Null.bsl

EVIL_PROVIDER_GetNamespaces_Null.fsx(2,1,2,51): parse error FS3051: The type provider 'Provider.EvilProviderWhereGetNamespacesReturnsNull' reported an error: The type provider returned 'null', which is not a valid return value from 'GetNamespaces'

EVIL_PROVIDER_GetNamespaces_Null.fsx(2,1,2,51): parse error FS3020: One or more errors seen during provided type setup
