tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetNamespaces_Null.fsx

#r "provider_EVIL_PROVIDER_GetNamespaces_Null.dll"

let x = 1
